--- a/index.html
+++ b/index.html
@@ -5,14 +5,71 @@
 	<meta name="viewport" content="width=a, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 	
-	<title>bagui de todos</title>
+	<title>Cadastro</title>
 </head>
-<body>
+<form class="formulario">
 	<div>
-		<img src="https://imgs.search.brave.com/CBSl_CWZVZxo2nE03xu_FlIQl7MLGO7Gc_do27wjWGY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zLnNk/ZS5nbG9iby5jb20v/bWVkaWEvb3JnYW5p/emF0aW9ucy8yMDE5/LzAxLzAzL05hdXRp/Y28uc3Zn" alt="">
-		<p>Vai tomar no cu guipy</p>
-		<img src="https://imgs.search.brave.com/CBSl_CWZVZxo2nE03xu_FlIQl7MLGO7Gc_do27wjWGY/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9zLnNk/ZS5nbG9iby5jb20v/bWVkaWEvb3JnYW5p/emF0aW9ucy8yMDE5/LzAxLzAzL05hdXRp/Y28uc3Zn" alt="">
-
+		<label for="nome">Nome:</label>
+		<input type="text" id="nome" name="nome" placeholder="Digite seu nome">
 	</div>
-</body>
+
+	<div>
+		<label for="email">Email:</label>
+		<input type="text"id="email" name="email" placeholder="Digite seu email">
+	</div>
+
+	<div>
+		<label for="senha">Senha:</label>
+		<input type="password" id="senha" name="senha" placeholder="Digite sua senha">
+	</div>	
+
+	<div>
+		<label for="data">Data de Nascimento:</label>
+		<input type="date" id="data" name="data">
+	</div>
+
+	<div>
+		<label for="opcoes">Sexo:</label>
+		<select id="sexo" name="sexo">
+			<option value="op1">Feminino</option>
+			<option value="op2">Masculino</option>
+		</select>
+	</div>
+
+	<div>
+		<label for="estado">Escolha um estado do Brasil:</label>
+		<input type="text" id="estado" name="estado" list="estados" placeholder="Digite ou selecione">
+		
+		<datalist id="estados">
+			<option value="Acre">
+			<option value="Alagoas">
+			<option value="Amapá">
+			<option value="Amazonas">
+			<option value="Bahia">
+			<option value="Ceará">
+			<option value="Distrito Federal">
+			<option value="Espírito Santo">
+			<option value="Goiás">
+			<option value="Maranhão">
+			<option value="Mato Grosso">
+			<option value="Mato Grosso do Sul">
+			<option value="Minas Gerais">
+			<option value="Pará">
+			<option value="Paraíba">
+			<option value="Paraná">
+			<option value="Pernambuco">
+			<option value="Piauí">
+			<option value="Rio de Janeiro">
+			<option value="Rio Grande do Norte">
+			<option value="Rio Grande do Sul">
+			<option value="Rondônia">
+			<option value="Roraima">
+			<option value="Santa Catarina">
+			<option value="São Paulo">
+			<option value="Sergipe">
+			<option value="Tocantins">
+		</datalist>
+	</div>
+	<button type="submit">Cadastrar</button>
+</form>
 </html>
