--- a/rotina-so-HTML/index.html
+++ b/rotina-so-HTML/index.html
@@ -17,11 +17,11 @@
 
 		<div class="text">
 			<p class="contet-text">
-				Minha rotina consiste em Ir para a <span>faculdade</span>, encontrar a glr, estudar aproveitar pra jogar um <span>truco</span>
-				chegar em casa <span>estudar mais um pouco</span>, focado em outras coisas, ir <span>treinar</span> pra ficar <span>gostosão</span>
-				e depois voltar pra casa pra finalmente <span>diffar newba no overwatch</span>. 
+				Minha rotina consiste em Ir para a <b><span>faculdade</span></b>, encontrar a glr, estudar aproveitar pra jogar um <b><span>Truco</span></b>
+				chegar em casa <b><span>estudar mais um pouco</span></b>, focado em outras coisas, ir <b><span>treinar</span></b> pra ficar <b><span>gostosão</span></b>
+				e depois voltar pra casa pra finalmente <b><span>diffar newba no overwatch</span></b>. 
 			  </p>
-			  <p><i>"Eu quero todos os paus."</i> ~Davy Jones</p>
+			  <p><i>"Esse era o tutorial para usar o spray"</i> ~Davy Jones</p>
 		</div>
 
 
