--- a/rotina/index.html
+++ b/rotina/index.html
@@ -21,7 +21,7 @@
 				chegar em casa <span>estudar mais um pouco</span>, focado em outras coisas, ir <span>treinar</span> pra ficar <span>gostosão</span>
 				e depois voltar pra casa pra finalmente <span>diffar newba no overwatch</span>. 
 			  </p>
-			  <p><i>"NÃO, roubaram meu pau"</i> ~rogério skylab</p>
+			  <p><i>"Esse era o tutorial para usar o spray"</i> ~Davy Jones</p>
 		</div>
 
 
