--- a/rotina/contato.html
+++ b/rotina/contato.html
@@ -7,8 +7,15 @@
 	<title>Contato</title>
 </head>
 <body>
-	<h1>Entre em contato:</h1>
-	<p>entre em contato pelo <a href="https://www.instagram.com/j0a0_constantino/ "target="_blank">Instagram</a>!</p>
-	<p>Ou pelo meu email: <a href="">Constantinodev27@gmail.com</a></p>
+	<div class="page">
+
+		<div class="contact-page">
+
+			<h1>Entre em contato:</h1>
+			<p>entre em contato pelo <a href="https://www.instagram.com/j0a0_constantino/ "target="_blank">Instagram</a>!</p>
+			<p>Ou pelo meu email: <a href="">Constantinodev27@gmail.com</a></p>
+
+		</div>
+	</div>
 </body>
 </html>
