--- a/rotina/index.html
+++ b/rotina/index.html
@@ -11,20 +11,33 @@
 	<header>
 		<h1>João Constantino</h1>
 	</header>
-	<div class="content">
+	<div class="wrapper">
 
-		<img class="content-pic" src="../assets/eu.jpg" alt="Foto Minha">
+		<div class="content">
+	
+			<img class="content-pic" src="../assets/eu.jpg" alt="Foto Minha">
+	
+			<div class="text">
+				<p class="contet-text">
+					Minha rotina consiste em ir para a <span>faculdade</span>, encontrar a galera, estudar, aproveitar para jogar um <span>truco</span>, 
+					chegar em casa, <span>estudar mais um pouco</span>, focado em outras coisas, ir <span>treinar</span> para ficar <span>gostosão</span> 
+					e depois voltar para casa para finalmente <span>difar noob no Overwatch</span>.
+					
+				  </p>
+				  <p><i>"Esse era o tutorial para usar o spray"</i> ~Davy Jones</p>
+				  			<div class="contact">
+				<a href="./contato.html"><button
+					type="button" 
+					class="contact-button"
+					>Entre em contato
+				</button>
+			</a>
+			  </div>
+			</div>
 
-		<div class="text">
-			<p class="contet-text">
-				Minha rotina consiste em Ir para a <span>faculdade</span>, encontrar a glr, estudar aproveitar pra jogar um <span>truco</span>
-				chegar em casa <span>estudar mais um pouco</span>, focado em outras coisas, ir <span>treinar</span> pra ficar <span>gostosão</span>
-				e depois voltar pra casa pra finalmente <span>diffar newba no overwatch</span>. 
-			  </p>
-			  <p><i>"Esse era o tutorial para usar o spray"</i> ~Davy Jones</p>
+	
+	
 		</div>
-
-
 	</div>
 
 		<div class="video">
@@ -39,11 +52,6 @@
 			Seu navegador não suporta áudio.
 		  </audio>
 
-		  <div class="contact">
 
-            <a href="./contato.html"><button
-				type="button" class="contact-button"> Entre em contato</button></a>
-
-		  </div>
 </body>
 </html>
